# EasyMIPS

./: .gitignore  CMakeLists.txt  LICENSE  build_mingw.sh  run_tests.sh
asm/examples/: add.asm  array_sum.asm  beq.asm  bne.asm  control_flow1.asm  control_flow2.asm  div.asm  divu.asm  easm_crt.asm  fact_nr.asm  factorial.asm  init.asm  iseven.asm  mult.asm  multu.asm  print_int2.asm  print_string.asm  print_string2.asm  read_int.asm  test.asm
cmake/: FindLineNoise.cmake  FindRE2C.cmake  FindTREECC.cmake
doc/: COMMAND_MANUAL.md  README.md
include/EasyMIPS/: colorizer.h  easm_clargs.h  easm_error.h  mem_iterator.h  mips32_assembler.h  mips32_ast.tc  mips32_ast_compile.tc  mips32_completion.h  mips32_lexer.h  mips32_parser.h  mips32_runtime.h  mips32_vm.h  native_lib.h  num_convert.h  sim_runtime.h
release-20260216/: EasyMIPS
src/: easm_clargs.cpp  easm_error.cpp  main.cpp  mips32_assembler.cpp  mips32_completion.cpp  mips32_lexer.re  mips32_parser.cpp  mips32_runtime.cpp  mips32_vm.cpp  native_lib.cpp
tests/: CMakeLists.txt
tests/mem_iterator/: CMakeLists.txt
tests/mips32_assembler/: CMakeLists.txt  mips32_assembler_test.cpp
tests/mips32_lexer/: CMakeLists.txt  mips32_lexer_test.cpp
tests/mips32_parser/: CMakeLists.txt  mips32_parser_test.cpp
tests/mips32_parser/files/asm/: bad.asm  data_byte.asm  data_hword.asm  data_word.asm  exec.asm  label.asm  lines.asm  mem_inst.asm  set.asm  show.asm  test1.asm
tests/mips32_parser/files/expected/: bad.asm  data_byte.asm  data_hword.asm  data_word.asm  import.asm  label.asm  lines.asm  mem_inst.asm  set.asm  show.asm  test1.asm
tests/mips32_vm/: CMakeLists.txt  mips32_vm_test.cpp
tests/mips32_vm/files/: hi_lo_hw.asm
tests/mips32_vm/files/asm/: arith.asm  bit.asm  compare.asm  control_flow.asm  data_def.asm  memory.asm  misc.asm  ovf1.asm  ovf2.asm  ovf3.asm  syscall.asm
tests/mips32_vm/files/asm/multiple1/: file1.asm  file2.asm  file3.asm
tests/mips32_vm/files/asm/multiple2/: file1.asm  file2.asm  start.asm
tests/mips32_vm/files/expected/: arith.txt  bit.txt  compare.txt  control_flow.txt  data_def.txt  hi_lo_hw.txt  memory.txt  misc.txt  multiple1.txt  multiple2.txt  syscall.txt
